src/components/header/Header.module.css
.header {
  width: 49rem;
  height: 100vh;
  background: var(--background-pink-top);
  box-shadow: 4px 0px 75.5px -20px rgba(0, 0, 0, 0.16);
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  padding: 10rem 12.5rem 10.6rem 5rem;
  min-height: 92rem;
}

.logo img {
  width: 31.4rem;
}

.mode-toggle-btn {
  margin: 2rem 0 0 5.9rem;
  width: 10rem;
  border: 2px solid var(--black-font-color);
  border-radius: 5rem;
  padding: 0.5rem 0.5rem;
  background-color: transparent;
  position: relative;
}

.mode-toggle-btn::before {
  content: "";
  background-image: url(/images/toggle-moon.svg);
  background-repeat: no-repeat;
  width: 3.2rem;
  height: 3.2rem;
  position: absolute;
  top: 0.8rem;
  left: 0.5rem;
}

.mode-toggle-btn::after {
  content: "";
  background-image: url(/images/toggle-sun.svg);
  background-repeat: no-repeat;
  width: 3.2rem;
  height: 3.2rem;
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.toggle-switch {
  width: 3.2rem;
  height: 3.2rem;
  background-color: var(--gray-font-color);
  border-radius: 5rem;
  position: relative;
}

.header-btn-container {
  padding: 5rem 0 0 5.9rem;
}

.header-btn-container button {
  background-color: transparent;
  width: 15rem;
  font-size: 2.4rem;
  color: var(--none-active-color);
  margin-bottom: 3.2rem;
  display: flex;
}

.header-btn-container nav {
  margin-bottom: 10rem;
}

.header-btn-container button.active {
  color: var(--black-font-color);
}

.header-btn-container button.active:not(.more-btn) {
  border-bottom: 3px solid var(--black-font-color);
}

.header-btn-container button:not(.more-btn).active::after {
  content: "";
  background-image: url(/images/active-star.svg);
  width: 3rem;
  height: 3rem;
  position: absolute;
  left: 25rem;
}

.nav-items button.active::before,
.more-btn.active::before {
  background-color: var(--black-font-color);
}

.nav-items button::before,
.more-btn::before {
  content: "";
  width: 4rem;
  height: 4rem;
  mask-size: contain;
  background-color: var(--none-active-color);
  display: inline-block;
  margin-right: 3rem;
}

.nav-items .home-btn::before {
  mask: url(/images/home.svg) no-repeat center;
}

.nav-items .search-btn::before {
  mask: url(/images/search.svg) no-repeat center;
}

.nav-items .message-btn::before {
  mask: url(/images/message.svg) no-repeat center;
}

.nav-items .alarm-btn::before {
  mask: url(/images/alarm.svg) no-repeat center;
}

.nav-items .writing-btn::before {
  mask: url(/images/writing.svg) no-repeat center;
}

.more-btn::before {
  mask: url(/images/more.svg) no-repeat center;
}

.profile-btn,
.more-btn {
  display: flex;
  align-items: center;
  position: fixed;
}

@media (max-height: 980px) {
  .profile-btn,
  .more-btn {
    position: static;
    margin-top: 2rem;
  }
}

.profile-btn {
  bottom: 12rem;
}

.more-btn {
  bottom: 5rem;
}
.profile-btn img {
  margin-right: 2rem;
}

